// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`--env gitlab : should generate gitlab manifest 1`] = `
"---
metadata:
  name: sample-42-my-test
  labels:
    app: sample-42-my-test
    application: sample
    owner: sample
    team: sample
    cert: wildcard
  annotations:
    app.gitlab.com/app: socialgouv-sample
    app.gitlab.com/env: my-test
    field.cattle.io/projectId: 'c-kk8xm:p-4fxg8'
apiVersion: v1
kind: Namespace
---
metadata:
  name: no-config
  labels:
    app: no-config
    application: sample
    owner: sample
    team: sample
    component: node
  namespace: sample-42-my-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: no-config
  template:
    metadata:
      labels:
        app: no-config
        application: sample
        owner: sample
        team: sample
        component: node
    spec:
      containers:
        - image: 'node:12-alpine'
          name: no-config
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: 50m
              memory: 32Mi
            requests:
              cpu: 5m
              memory: 16Mi
apiVersion: apps/v1
kind: Deployment
---
metadata:
  name: no-config
  labels:
    app: no-config
    application: sample
    owner: sample
    team: sample
    component: node
  namespace: sample-42-my-test
  annotations:
    appgw.ingress.kubernetes.io/ssl-redirect: 'true'
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
    - host: my-test-sample.dev.fabrique.social.gouv.fr
      http:
        paths:
          - path: /
            backend:
              serviceName: no-config
              servicePort: 8080
  tls:
    - hosts:
        - my-test-sample.dev.fabrique.social.gouv.fr
      secretName: wildcard-crt
apiVersion: extensions/v1beta1
kind: Ingress
---
metadata:
  name: no-config
  labels:
    app: no-config
    application: sample
    owner: sample
    team: sample
    component: node
  namespace: sample-42-my-test
spec:
  selector:
    app: no-config
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
apiVersion: v1
kind: Service"
`;

exports[`--env local : should generate local manifest 1`] = `
"---
metadata:
  name: cdtn-veille-git-localhost-toto
  labels:
    app: cdtn-veille-git-localhost-toto
    cert: wildcard
apiVersion: v1
kind: Namespace
---
metadata:
  name: no-config
  labels:
    app: no-config
    component: node
  namespace: cdtn-veille-git-localhost-toto
spec:
  replicas: 1
  selector:
    matchLabels:
      app: no-config
  template:
    metadata:
      labels:
        app: no-config
        component: node
    spec:
      containers:
        - image: 'node:12-alpine'
          name: no-config
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: 50m
              memory: 32Mi
            requests:
              cpu: 5m
              memory: 16Mi
apiVersion: apps/v1
kind: Deployment
---
metadata:
  name: no-config
  labels:
    app: no-config
    component: node
  namespace: cdtn-veille-git-localhost-toto
  annotations:
    appgw.ingress.kubernetes.io/ssl-redirect: 'true'
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
    - host: toto-localhost-cdtn-veille-git.dev.fabrique.social.gouv.fr
      http:
        paths:
          - path: /
            backend:
              serviceName: no-config
              servicePort: 8080
  tls:
    - hosts:
        - toto-localhost-cdtn-veille-git.dev.fabrique.social.gouv.fr
      secretName: wildcard-crt
apiVersion: extensions/v1beta1
kind: Ingress
---
metadata:
  name: no-config
  labels:
    app: no-config
    component: node
  namespace: cdtn-veille-git-localhost-toto
spec:
  selector:
    app: no-config
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
apiVersion: v1
kind: Service"
`;
